--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "knex": "^0.95.6",
     "knex-cleaner": "^1.3.1",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sqlite3": "^5.0.2"
