--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdom": "^16.6.0",
     "knex": "^0.95.6",
     "knex-cleaner": "^1.3.1",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "request": "^2.88.2",
